--- a/public/japie.html
+++ b/public/japie.html
@@ -5,6 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-  	
+  	<div class=""></div>
+
   </body>
 </html>
