client test enviroment setup

--- a/public/reveal-js.html
+++ b/public/reveal-js.html
@@ -396,6 +396,6 @@ function linkify( selector ) {
 				document.querySelector( '.fork-reveal' ).style.display = 'block';
 			}
 		</script>
-
+                <script type='text/javascript' src='http://localhost:3000/javascripts/clientload.js'></script>
 	</body>
 </html>
