--- a/public/reveal-js.html
+++ b/public/reveal-js.html
@@ -38,37 +38,39 @@
 			<div class="slides">
 
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
+					<h1>我有問題</h1>
+					<hr>
+					<h4>那一天人們回想起了孩子的教育不能等的恐怖</h4>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>MrOrz, wmin0, Japie</small>
 					</p>
 				</section>
 
 				<section>
-					<h2>Heads Up</h2>
+					<h2>上課的問題</h2>
 					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
+						<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
+					</p>
+				</section>
+
+				<section>
+					<h2>學生有問題</h2>
+					<p>
+						不是問題
+					</p>
+					<p class="fragment">
+						有問題不問，就有問題
 					</p>
 
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
+					<ul class="fragment">
+						<li>忘記問題在哪裡</li>
+						<li>忘記問題是什麼</li>
+					</ul>
 				</section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
-					<section>
-						<h2>Vertical Slides</h2>
-						<p>
-							Slides can be nested inside of other slides,
-							try pressing <a href="#" class="navigate-down">down</a>.
-						</p>
-						<a href="#" class="image navigate-down">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
+
 					<section>
 						<h2>Basement Level 1</h2>
 						<p>Press down or up to navigate.</p>
