--- a/public/reveal-js.html
+++ b/public/reveal-js.html
@@ -42,54 +42,84 @@
 					<hr>
 					<h4>那一天人們回想起了孩子的教育不能等的恐怖</h4>
 					<p>
-						<small>MrOrz, wmin0, Japie</small>
+						<small>MrOrz, wmin0, Japie</small> <br>
 					</p>
 				</section>
 
 				<section>
-					<h2>上課的問題</h2>
+					<h2>上課的互動問題</h2>
 					<p>
-						<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
+						<img width="500" src="slide/student-computer.jpg">
 					</p>
 				</section>
 
-				<section>
-					<h2>學生有問題</h2>
-					<p>
-						不是問題
-					</p>
-					<p class="fragment">
-						有問題不問，就有問題
-					</p>
 
-					<ul class="fragment">
-						<li>忘記問題在哪裡</li>
-						<li>忘記問題是什麼</li>
-					</ul>
+				<section>
+					<section>
+						<h2>學生有問題</h2>
+						<p>
+							不是問題
+						</p>
+						<p class="fragment">
+							有問題不問，就有問題
+						</p>
+
+						<div class="fragment">
+							<hr>
+							<h4>
+								下課再問
+							</h4>
+						</div>
+						<ul class="fragment">
+							<li>忘記問題在哪裡</li>
+							<li>忘記問題是什麼</li>
+						</ul>
+
+						<div class="fragment">
+							<hr>
+							<h4>
+								問旁邊同學
+							</h4>
+							<p>兩個人一起落進度</p>
+						</div>
+
+					</section>
+					<section>
+						<h1>即時發問<br><br>很重要</h1>
+					</section>
 				</section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
+					<section>
+						<h2>不問問題的原因</h2>
+						<p><img src="slide/cat.jpg" alt=""></p>
+						<p>怕全班只有自己有這個問題</p>
+					</section>
 
 					<section>
-						<h2>Basement Level 1</h2>
-						<p>Press down or up to navigate.</p>
+						<h2>但其實大家很敢講</h2>
+						<p><img src="slide/askQuestion.png" alt=""></p>
 					</section>
+
 					<section>
-						<h2>Basement Level 2</h2>
-						<p>Cornify</p>
-						<a class="test" href="http://cornify.com">
-							<img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 3</h2>
-						<p>That's it, time to go back up.</p>
-						<a href="#/2" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-						</a>
+						<h1>匿名後<br><br>會變敢問</h1>
 					</section>
 				</section>
+
+				<section>
+					<img src="slide/myslide.png" alt="">
+					<p>HTML5 的 Javascript 教學投影片</p>
+					<p class="fragment">可以和教材互動，但沒辦法和我（講師）互動。
+					</p>
+				</section>
+
+				<section>
+					<h1>我有問題</h1>
+					<p>即時發問&nbsp;&nbsp;&nbsp;&nbsp; ✖ &nbsp;&nbsp;&nbsp;&nbsp; 匿名 &nbsp;&nbsp;&nbsp;&nbsp; ✖ &nbsp;&nbsp;&nbsp;&nbsp;HTML Slides</p>
+				</section>
+
+
 
 				<section>
 					<h2>Slides</h2>
@@ -366,7 +396,6 @@ function linkify( selector ) {
 
 		<!-- Everything below this point is unrelated to the slideshow -->
 
-		<a class="fork-reveal" style="display: none;" href="https://github.com/hakimel/reveal.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/camo.github.com/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
 
 		<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
@@ -384,7 +413,6 @@ function linkify( selector ) {
 
 		<script>
 			if( !navigator.userAgent.match( /iphone|ipod|android|ipad|blackberry/gi ) && !!document.querySelector ) {
-				document.querySelector( '.fork-reveal' ).style.display = 'block';
 			}
 		</script>
                 <script type='text/javascript' src='http://localhost:3000/javascripts/clientload.js'></script>
