--- a/public/reveal-js.html
+++ b/public/reveal-js.html
@@ -415,6 +415,7 @@ function linkify( selector ) {
 			if( !navigator.userAgent.match( /iphone|ipod|android|ipad|blackberry/gi ) && !!document.querySelector ) {
 			}
 		</script>
-                <script type='text/javascript' src='http://localhost:3000/javascripts/clientload.js'></script>
+<script type="text/javascript"
+src="http://localhost:3000/c.js" id="°▽°ﾉ" data-room-id="50e2"></script>
 	</body>
 </html>
