--- a/public/reveal-js.html
+++ b/public/reveal-js.html
@@ -44,52 +44,56 @@
           <p>
             <small>MrOrz, wmin0, Japie</small> <br>
           </p>
-        </section>
-
-        <section>
-          <h1>我有問題</h1>
-          <h3 class="fragment"></h3>
-        </section>
-
-        <section>
-          <h2>你有什麼問題？</h1>
-          <h3 class="fragment"></h3>
-        </section>
-
+        </section>      
 
         <section>
           <section>
-            <h2>學生有問題</h2>
-          <section>
-            <p>
-              不是問題
-            </p>
+          <h2>「你有什麼問題？」</h2>
+          <img width="500" src="slide/beautiful.jpg">
           </section>
           <section>
-            <p>
-              有問題不問
-            </p>
+            <h2>上課有問題</h2>
+            <img width="500" src="slide/student-computer.jpg">
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>上課有問題</h2>
           </section>
           <section>
-            就有問題
+            <h2>不是問題</h2>
+          </section>
+          <section>
+            <h2>有問題不問<h2>
+          </section>
+          <section>
+            <h2>就有問題</h2>
           </section>
           <section>
             <h1>
-              下課再問
+              下課再問？
             </h1>
-            <ul class="fragment">
+          </section>
+          <section>
+            <ul>
               <li>忘記問題在哪裡</li>
               <li>忘記問題是什麼</li>
             </ul>
           </section>
           <section>
             <h1>
-              問旁邊同學
+              問旁邊同學？
             </h1>
+          </section>
+          <section>
             <p class="fragment">兩個人一起落進度</p>            
           </section>
           <section>
-            <h1 style="color:red;">即時發問<br><br>很重要</h1>
+            <h1>
+              <span class="highlight-red">即時發問</span>
+              <br><br>很重要
+            </h1>
           </section>
         </section>
         <!-- Example of nested vertical slides -->
