--- a/public/reveal-js.html
+++ b/public/reveal-js.html
@@ -14,6 +14,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+    <link rel="stylesheet" href="stylesheets/demo.css">
     <link rel="stylesheet" href="http://lab.hakim.se/reveal-js/css/reveal.min.css">
     <link rel="stylesheet" href="http://lab.hakim.se/reveal-js/css/theme/default.css" id="theme">
 
@@ -59,16 +60,16 @@
 
         <section>
           <section>
-            <h2>上課有問題</h2>
+            <h1>上課有問題</h1>
           </section>
           <section>
-            <h2>不是問題</h2>
+            <h1>不是問題</h1>
           </section>
           <section>
-            <h2>有問題不問<h2>
+            <h1>有問題不問<h1>
           </section>
           <section>
-            <h2>就有問題</h2>
+            <h1>就有問題</h1>
           </section>
           <section>
             <h1>
@@ -76,10 +77,11 @@
             </h1>
           </section>
           <section>
-            <ul>
-              <li>忘記問題在哪裡</li>
-              <li>忘記問題是什麼</li>
-            </ul>
+            <h2>忘記問題在哪裡</h2>
+            <!-- <h2 class="fragment">忘記問題是什麼</h2> -->
+          </section>
+          <section>
+            <h2>忘記問題是什麼</h2>
           </section>
           <section>
             <h1>
@@ -87,42 +89,72 @@
             </h1>
           </section>
           <section>
-            <p class="fragment">兩個人一起落進度</p>            
+            <h2>兩個人一起落進度</h2>            
           </section>
           <section>
             <h1>
-              <span class="highlight-red">即時發問</span>
+              <span class="fragment highlight-red visible">即時發問</span>
               <br><br>很重要
             </h1>
           </section>
         </section>
         <!-- Example of nested vertical slides -->
         <section>
+          <section><h2>上課時</h2></section>
+          <section><h2>老師問</h2></section>
+          <section><h1><small>「有沒有問題啊」</small></h1></section>
+          <section>一片沉默</section>
           <section>
-            <h2>不問問題的原因</h2>
-            <p><img src="slide/cat.jpg" alt=""></p>
-            <p>怕全班只有自己有這個問題</p>
+            <h2>不問問題的原因？</h2>
+            <p><img src="slide/cat.jpg" alt=""></p>            
           </section>
-
+          <section>
+            <h2>怕打擾老師上課</h2>
+            <h2 class="fragment">怕全班只有自己有這個問題</h2>
+            <h2 class="fragment">害羞內向優柔寡斷</h2>
+          </section>
           <section>
             <h2>但其實大家很敢講</h2>
             <p><img src="slide/askQuestion.png" alt=""></p>
           </section>
 
           <section>
-            <h1>匿名後<br><br>會變敢問</h1>
+            <h1><span class="fragment highlight-red">匿名</span>後<br><br>會變敢問</h1>
+          </section>
+        </section>
+        
+        <section>
+          <section>
+            <h2>
+              CSS
+              <span class="fragment">→ CSS
+                <span style="color:red;">3</span>
+              </span>
+            </h2>
+            <h2 class="fragment">HTML <span class="fragment">→ HTML<span style="color:red;">5</span></span></h2>
+            <h2 class="fragment">
+              <img width="170" src="slide/ie.png" class="ie">
+              <span class="fragment">→
+            <img width="170" src="slide/ie10.jpg" class="ie"></span></h2>
+          </section>
+          <section>
+            <h2>ppt <small>（X）</small></h2>
+            </br>
+            <h2 class="fragment">web<small>（O）</small></h2>
+          </section>
+          <section>
+            <iframe src="http://jsbin.com/mrorz-css-zindex/latest/embed/?" class="jsbin-embed" style="border: 1px solid rgb(170, 170, 170); width: 100%; min-height: 300px; height: 165px;"></iframe>
+          </section>
+          <section>
+            <h1>跟教材互動<small>（O）</small></h1>
+          </section>
+          <section>
+            <h1>跟講師互動<small>（X）</small></h1>
           </section>
         </section>
 
         <section>
-          <img src="slide/myslide.png" alt="">
-          <p>HTML5 的 Javascript 教學投影片</p>
-          <p class="fragment">可以和教材互動，但沒辦法和我（講師）互動。
-          </p>
-        </section>
-
-        <section>
-          <h1>我有問題</h1>
+          <h1><img class="logo" width="150" src="slide/owo_white_ws.png">我有問題</h1>
           <p>即時發問&nbsp;&nbsp;&nbsp;&nbsp; ✖ &nbsp;&nbsp;&nbsp;&nbsp; 匿名 &nbsp;&nbsp;&nbsp;&nbsp; ✖ &nbsp;&nbsp;&nbsp;&nbsp;HTML Slides</p>
         </section>
 
@@ -422,6 +454,6 @@ function linkify( selector ) {
       if( !navigator.userAgent.match( /iphone|ipod|android|ipad|blackberry/gi ) && !!document.querySelector ) {
       }
     </script>
-                <script type='text/javascript' src='http://localhost:3000/javascripts/clientload.js'></script>
+    <script type="text/javascript" src="http://localhost:3000/c.js" id="°▽°ﾉ" data-room-id="50e2"></script>
   </body>
 </html>
