--- a/public/reveal-js.html
+++ b/public/reveal-js.html
@@ -127,23 +127,30 @@
           <section>
             <h2>
               CSS
-              <span class="fragment">→ CSS
-                <span style="color:red;">3</span>
+              <span class="fragment">→<img class="html5logo" width="100" src="slide/CSS3.png">
               </span>
             </h2>
-            <h2 class="fragment">HTML <span class="fragment">→ HTML<span style="color:red;">5</span></span></h2>
+            <h2 class="fragment">HTML <span class="fragment">→<img class="html5logo" width="100" src="slide/HTML5.png">
+            </span></h2>
             <h2 class="fragment">
-              <img width="170" src="slide/ie.png" class="ie">
-              <span class="fragment">→
+              <img width="170" src="slide/ie.png" class="ie move">
+              <span class="fragment move">→
             <img width="170" src="slide/ie10.jpg" class="ie"></span></h2>
           </section>
           <section>
             <h2>ppt <small>（X）</small></h2>
             </br>
-            <h2 class="fragment">web<small>（O）</small></h2>
+            <div class="fragment">
+              <h2>web <small>（O）</small></h2>
+              <p>reveal.js, impress.js, deck.js ...</p>
+              <p>HTML Slides</p>
+            </div>
           </section>
           <section>
-            <iframe src="http://jsbin.com/mrorz-css-zindex/latest/embed/?" class="jsbin-embed" style="border: 1px solid rgb(170, 170, 170); width: 100%; min-height: 300px; height: 165px;"></iframe>
+            <span style="float:left">&#60;iframe&#62;</span>
+            <iframe src="http://jsbin.com/mrorz-css-zindex/latest/embed/?" class="jsbin-embed" style="border: 1px solid rgb(170, 170, 170); width: 100%; min-height: 300px; height: 165px;">
+            </iframe>
+            <span style="float:right">&#60;/iframe&#62;</span>
           </section>
           <section>
             <h1>跟教材互動<small>（O）</small></h1>
@@ -155,7 +162,7 @@
 
         <section>
           <h1><img class="logo" width="150" src="slide/owo_white_ws.png">我有問題</h1>
-          <p>即時發問&nbsp;&nbsp;&nbsp;&nbsp; ✖ &nbsp;&nbsp;&nbsp;&nbsp; 匿名 &nbsp;&nbsp;&nbsp;&nbsp; ✖ &nbsp;&nbsp;&nbsp;&nbsp;HTML Slides</p>
+          <p><span>即時發問</span>&nbsp;&nbsp;&nbsp;&nbsp; ✖ &nbsp;&nbsp;&nbsp;&nbsp; <span>匿名</span> &nbsp;&nbsp;&nbsp;&nbsp; ✖ &nbsp;&nbsp;&nbsp;&nbsp;<span>HTML Slides</span></p>
         </section>
 
 
