--- a/public/reveal-js.html
+++ b/public/reveal-js.html
@@ -110,8 +110,8 @@
           </section>
           <section>
             <h2>怕打擾老師上課</h2>
-            <h2 class="fragment">怕全班只有自己有這個問題</h2>
-            <h2 class="fragment">害羞內向優柔寡斷</h2>
+            <h2 class="fragment">怕只有自己有這個問題</h2>
+            <h2 class="fragment">生性害羞靦腆內向優柔寡斷</h2>
           </section>
           <section>
             <h2>但其實大家很敢講</h2>
@@ -124,6 +124,12 @@
         </section>
         
         <section>
+          <section>
+            <h1>進化</h1>
+            <img width="300" src="slide/people.jpg" class="fragment">
+            <img width="300" src="slide/pikachu.jpeg" class="fragment">
+            <img width="300" src="slide/wukon.png" class="fragment">
+          </section>
           <section>
             <h2>
               CSS
@@ -163,6 +169,10 @@
         <section>
           <h1><img class="logo" width="150" src="slide/owo_white_ws.png">我有問題</h1>
           <p><span>即時發問</span>&nbsp;&nbsp;&nbsp;&nbsp; ✖ &nbsp;&nbsp;&nbsp;&nbsp; <span>匿名</span> &nbsp;&nbsp;&nbsp;&nbsp; ✖ &nbsp;&nbsp;&nbsp;&nbsp;<span>HTML Slides</span></p>
+          <div class="fragment">
+            <p>http://owo.herokuapp.com/</p>
+            <img class="" width="150" src="slide/owoqrcode.png">
+          </div>  
         </section>
 
 
